# app-discovery

./: .env.example  .gitignore  CLAUDE.md  CODEMAP.md  CONTROL.md  DECISIONS.md  README.md  STRATEGY.md  curated-app-platform-design.md  pyproject.toml  render.yaml
apps/accounts/: admin.py  apps.py  auth_backend.py  forms.py  managers.py  models.py  permissions.py  roles.py  serializers.py  services.py  urls.py  views.py
apps/catalog/: admin.py  apps.py  errors.py  facets.py  forms.py  gate.py  models.py  notifications.py  selectors.py  serializers.py  services.py  urlnorm.py  urls.py  views.py
apps/core/: apps.py  config.py  email.py  middleware.py  observability.py  ratelimit.py  views.py
apps/dashboard/: README.md  apps.py  charts.py  reception.py  urls.py  views.py  windows.py
apps/discovery/: README.md  apps.py  urls.py  views.py
apps/interests/: README.md  admin.py  apps.py  errors.py  models.py  selectors.py  services.py  urls.py  views.py
apps/pages/: README.md  apps.py  emission.py  urls.py  views.py
apps/ratings/: README.md  admin.py  apps.py  errors.py  gate.py  models.py  selectors.py  services.py  urls.py  views.py
apps/signals/: PRIVACY.md  admin.py  apps.py  capture.py  errors.py  kinds.py  middleware.py  models.py  selectors.py
apps/subscriptions/: README.md  admin.py  apps.py  errors.py  models.py  notices.py  selectors.py  services.py  urls.py  views.py
apps/taxonomy/: admin.py  apps.py  errors.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/updates/: README.md  apps.py  errors.py  models.py  selectors.py  services.py  urls.py  views.py
apps/widget/: README.md  apps.py  attribution.py  content.py  kinds.py  models.py  rollup.py  selectors.py  source.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: deploy-identity-accounts.md  mvp-component-breakdown.md
docs/deploy/: deploy-runbook.md  email-provider-setup.md  staging-walkthrough.md
features/: INDEX.md  README.md
features/app-page-redesign/: DECISIONS.md  DESIGN.md  FEATURE_BRIEF.md  OPEN_QUESTIONS.md  RELEASE_NOTES.md  TASKS.md  TEST_PLAN.md
features/app-pages/: DECISIONS.md  DESIGN.md  FEATURE_BRIEF.md  OPEN_QUESTIONS.md  RELEASE_NOTES.md  TASKS.md  TEST_PLAN.md
features/app-subscriptions/: DECISIONS.md  DESIGN.md  FEATURE_BRIEF.md  OPEN_QUESTIONS.md  RELEASE_NOTES.md  TASKS.md  TEST_PLAN.md
features/developer-dashboard/: DECISIONS.md  DESIGN.md  FEATURE_BRIEF.md  OPEN_QUESTIONS.md  RELEASE_NOTES.md  TASKS.md  TEST_PLAN.md
features/developer-updates/: DECISIONS.md  DESIGN.md  (+5 more)
issues/: BUG-000.md  BUG-001.md  BUG-002.md  BUG-003.md  BUG-004.md  BUG-005.md  Q-001.md  Q-002.md  Q-003.md  Q-004.md  README.md  UX-001.md  UX-002.md  UX-003.md  UX-004.md  UX-005.md  UX-006.md
patches/: INDEX.md  README.md
process/: activity-archive.md
(+348 files in other folders)
