[project]
name = "app-discovery"
version = "0.1.0"
description = "Curated App Discovery Platform — identity-accounts feature"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.1",
    "PyYAML>=6.0",  # parses the human-editable taxonomy seed file (apps/taxonomy, DESIGN §6)
    "Pillow>=10.0",  # validates uploaded app screenshots at the boundary (apps/catalog, DESIGN §9)
    # --- Deployment / serving stack (platform-staging DESIGN §4, global D-12) ---
    "gunicorn>=22.0",  # production WSGI server (Render start command)
    "whitenoise>=6.6",  # serve hashed/compressed static (incl. admin) without a second web server
    "dj-database-url>=2.1",  # parse a single DATABASE_URL; falls back to discrete DB_* locally
    "redis>=5.0",  # client for the shared cache (auth limiter correct across gunicorn workers)
    "sentry-sdk[django]>=2.0",  # error monitoring; only active when SENTRY_DSN is set (env-gated)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".pgdata", ".pgrun", "**/migrations/*"]

[tool.ruff.lint]
# Boring, well-understood rule set: pyflakes (F), pycodestyle (E/W),
# isort (I), bugbear (B), pyupgrade (UP). No exotic linters.
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Settings legitimately uses module-level wildcard-style config and long lines.
"config/settings.py" = ["E501"]
